objects/nFORCE__Tile__c.object
<CustomObject>
    <description>This object contains supplemental information for a Route.</description>
    <fields>
        <fullName>nFORCE__Body__c</fullName>
        <description>The text displayed in the Tile. Supports formatted HTML.</description>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Header__c</fullName>
        <description>The title field for the Tile.</description>
        <label>Header</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Icon_Path__c</fullName>
        <description>This field is optional. If populated it should contain text which corresponds to an SLDS icon to be displayed on the Tile.</description>
        <inlineHelpText>Enter the path to an SLDS Icon (Custom, Standard, or Utility) starting after &apos;...icons/&apos;. For example, the account standard icon path would be &apos;standard-sprite/svg/symbols.svg#account&apos;.</inlineHelpText>
        <label>Icon Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>